feat(bid): add bid endpoints
