# src/main/java/org/soup/ssu/bench/controller/BidsController.java
@@ -3,7 +3,9 @@ package org.soup.ssu.bench.controller;
 import lombok.RequiredArgsConstructor;
 import org.soup.ssu.bench.config.security.AuthenticatedUser;
 import org.soup.ssu.bench.config.security.AuthenticatedUserContext;
+import org.soup.ssu.bench.service.BidService;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.RestController;
 import ssu.bench.endpoint.BidsApi;
 import ssu.bench.model.BidResponse;
@@ -16,31 +18,33 @@ import java.math.BigInteger;
 public class BidsController implements BidsApi {
 
     private final AuthenticatedUserContext userContext;
+    private final BidService bidService;
 
     @Override
     public ResponseEntity<BidResponse> getBidById(BigInteger bidId) {
-        return ResponseEntity.ok().build();
-    }
-
-    @Override
-    public ResponseEntity<PageBidResponse> getMyBids(Integer page, Integer size) {
-        AuthenticatedUser user = userContext.getAuthenticatedUser();
-        return ResponseEntity.ok().build();
+        BidResponse bidResponse = bidService.getBidById(bidId);
+        return ResponseEntity.ok(bidResponse);
     }
 
     @Override
     public ResponseEntity<PageBidResponse> getTaskBids(BigInteger taskId, Integer page, Integer size) {
-        return ResponseEntity.ok().build();
+        PageBidResponse pageBidResponse = bidService.getTaskBids(taskId, page, size);
+        return ResponseEntity.ok(pageBidResponse);
     }
 
     @Override
+    @PreAuthorize("hasRole('ADMIN') || hasRole('EXECUTOR')")
     public ResponseEntity<BidResponse> postAcceptBid(BigInteger bidId) {
         AuthenticatedUser user = userContext.getAuthenticatedUser();
-        return ResponseEntity.ok().build();
+        BidResponse bidResponse = bidService.acceptBid(bidId, user.id());
+        return ResponseEntity.ok(bidResponse);
     }
 
     @Override
+    @PreAuthorize("hasRole('ADMIN') || hasRole('EXECUTOR')")
     public ResponseEntity<BidResponse> postCreateBid(BigInteger taskId) {
-        return ResponseEntity.ok().build();
+        AuthenticatedUser user = userContext.getAuthenticatedUser();
+        BidResponse bidResponse = bidService.createBid(taskId, user.id());
+        return ResponseEntity.ok(bidResponse);
     }
 }
